[package]
name = "xmltranslator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "*"
tokio = { version = "*", features = ["full"] }
rust-translate = "*"
clap ={ version = "*",features = ["derive"]}
ctrlc = "*"